# aoc2022

./: CMakeLists.txt  README.md  build.sh
day1/: part1.cpp  part2.cpp
day2/: part1.cpp  part2.cpp
day3/: part1.cpp  part2.cpp
day4/: part1.cpp  part2.cpp
day5/: part1.cpp  part2.cpp
day6/: part1.cpp  part2.cpp
day7/: part1.cpp  part2.cpp
day8/: part1.cpp  part2.cpp
day9/: part1.cpp  part2.cpp
helper/: helper.h
